--- a/css/style.css
+++ b/css/style.css
@@ -299,7 +299,7 @@ p {
 
 .main-nav {
     position: absolute;
-    width: 100%;
+    width: 120%;
     top: 0;
     left: 0;
     z-index: 90;
@@ -405,14 +405,53 @@ p {
     display: none;
 }
 
+.htooltip span {
+	z-index: 1000;
+}
+.htooltip:hover span {
+	opacity: 1;
+	visibility: visible;
+}		
+.htooltip span img { /* Изображение для примера */
+    background-color: #bbbbbb;
+	margin-top: -165px;
+    margin-left: -150px;
+	opacity: 0;
+	padding: 10px;
+	z-index: 10;
+    width: 150px;
+    height: 150px;
+	position: absolute;
+	visibility: hidden;
+	z-index: 1000;
+    border-radius: 10px;
+}
+.htooltip-fix span img { 
+	position: fixed;
+}
+		
+.htooltip:hover span img { /* Показываем изображение */
+	opacity: 1;
+	visibility: visible;
+}
+
 /* adaptation */
+@media (max-width: 1300px) {
+    .header__content {
+        margin: 0 50px;
+    }
+}
+@media (max-width: 1200px) {
+    .language-switcher {
+        margin-left: 0;
+    }
+}
 @media (max-width: 1045px) {
-    .container{
-        max-width: 754px;
+    .header__content {
+        margin: 0;
     }
-    .navbar__links{
-        display: none;
-    }
+}
+@media (max-width: 1100px) {
     .navbar__right{
         position: absolute;
         right: 0;
@@ -421,20 +460,39 @@ p {
     .menu__burger {
         display: block;
     }
-    .navbar__logo-image{
-        width: 110px;
+    .navbar__links{
+        display: none;
     }
     .burger-header {
         display: block;
     }
 }
-
+@media (max-width: 1045px) {
+    .header__content {
+        margin: 0;
+    }
+    .container{
+        max-width: 754px;
+    }
+    
+    .navbar__logo-image{
+        width: 110px;
+    }
+}
+@media (max-width: 770px) {
+    .header__content {
+        margin: 0 20px;
+    }
+}
 @media (max-width: 500px) {
     .container{
         max-width: 363px;
     }
     .main-nav-messengers-list {
         margin-left: 50px;
+    }
+    .header__content {
+        margin: 0;
     }
 }
 
@@ -621,6 +679,15 @@ p {
     .hero {
         border-radius: 20px;
     }
+    .hero__content {
+        margin: 0 20px;
+    }
+    .hero__btn {
+        padding: 15px;
+    }
+    .hero__title {
+        margin-bottom: 20px;
+    }
 }
 @media (max-width: 720px) {
     .cube-1 {
@@ -697,6 +764,12 @@ p {
         min-height: 700px;
     }
 }
+@media (max-width: 500px) {
+    .hero__content {
+        margin: 0;
+    }
+}
+
 @media (max-width: 430px) {
     .fix-title-open {
         display: none;
@@ -774,19 +847,20 @@ p {
     .help__item-title {
         margin-left: 0;
     }
-
+    .help-title {
+        padding-bottom: 50px;
+    }
     .service-card:nth-child(2) {
         max-width: 475px;
     }
     .service-card:nth-child(1) {
         max-width: 475px;
     }
-.service-card:nth-child(5) {
-    max-width: 275px;
-}
+    .service-card:nth-child(5) {
+        max-width: 275px;
+    }
 }
 @media (max-width: 1230px) {
-  
     .service-card {
         padding: 20px;
     }    
@@ -811,18 +885,20 @@ p {
     .service-card:nth-child(7) {
         max-width: 362px;
     }
+}
+@media (max-width: 1045px) {
+    .services-flex {
+        margin: 0px -5px 30px;
+        gap: 20px;
+    }
     .help-title {
         margin-left: 0;
     }
 }
-@media (max-width: 1030px) {
-.services-flex {
-    margin: 0px -5px 30px;
-    gap: 20px;
-}
-}
 @media (max-width: 770px) {
-  
+    .help__content {
+        margin: 0 20px;
+    }
     .service-card:nth-child(1){
         max-width: none;
     }
@@ -872,6 +948,11 @@ p {
     }
     .services-flex {
         gap: 20px;
+    }
+}
+@media (max-width: 500px) {
+    .help__content {
+        margin: 0;
     }
 }
 
@@ -960,18 +1041,23 @@ p {
 }
 
 @media (max-width: 1300px) {
+    .extra--help__title {
+        margin-left: 0
+    }
    .extra--help {
-    margin-top: 50px;
-    padding-bottom: 50px;
+        margin-top: 50px;
+        padding-bottom: 50px;
    } 
    .extra--help-cards {
-    margin: 0 50px;
-    width: 93%;
-    column-gap: 20px;
-    row-gap: 20px;
+        column-gap: 20px;
+        row-gap: 20px;
+        margin: 0;
    }
    .extra--help-content-subtitle {
-    margin-left: 0;
+        margin-left: 0;
+    }
+    .extra--help__container {
+        margin: 0 50px;
     }
 }
 @media (max-width: 1045px) {
@@ -984,6 +1070,9 @@ p {
     }
     .extra--help-content-subtitle {
         margin-left: 0;
+    }
+    .extra--help__container {
+        margin: 0;
     }
 }
 @media (max-width: 769px) {
@@ -1020,6 +1109,9 @@ p {
     }
     .extra--help-content-text {
         padding: 0 20px;
+    }
+    .extra--help__container {
+        margin: 0 20px;
     }
 }
 @media (max-width: 500px) {
@@ -1059,6 +1151,9 @@ p {
     }
     .extra--help-card4 {
         height: 100%;
+    }
+    .extra--help__container {
+        margin: 0;
     }
 }
 
@@ -1552,9 +1647,10 @@ p {
 
 .logic-cards {
   display: grid;
-  grid-template-columns: repeat(2, minmax(300px, 1fr));
+  grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 20px;
   box-sizing: border-box;
+  align-items: stretch;
 }
 
 .logic-card {
@@ -1608,7 +1704,9 @@ p {
 
 .logic_image {
     max-width: 100%; 
+    max-height: 100%;
     width: 1000px;
+    height: auto;
     object-fit: contain;
     border-radius: 25px;
     filter: grayscale(100%) brightness(0.7);
@@ -1621,6 +1719,7 @@ p {
 
 .logic-content-text {
     padding: 30px;
+    word-wrap: break-word;
 }
 
 .logistics-delivery-text {
@@ -1633,102 +1732,97 @@ p {
     list-style-type: disc;
 }
 
+.logic-content-row-card1 img {
+    max-width: 413px;
+    height: 413px;
+}
+.logic-content-row-card5 img {
+    max-width: 403px;
+    height: 498px;
+}
+
 @media (max-width: 1430px) {
-    
+   
 }
 
 @media (max-width: 1300px) {
     .logistics__title {
-        margin-bottom: 50px;
-        font-size: 2.2rem;
+        margin-bottom: 30px;
     }    
     .logistics__subtitle {
-        margin-bottom: 50px;
-        font-size: 1.3rem;
-    }
-    .logic-cards {
-        gap: 20px;
-        padding: 0 30px;
-    }    
-    .logic-card1,
-    .logic-card2 {
-        height: 380px; 
-    }    
-    .logic-card3 {
-        height: 190px;
-    }    
-    .logic-card4,
-    .logic-card5 {
-        height: 450px; 
-    }
-    .logic-card1 img {
-        height: 379px; 
-    }    
-    .logic-card5 img {
-        height: 448px;
-    }    
+        margin-bottom: 30px;
+    }   
     .logic-content-text {
-        padding: 25px; 
+        margin-left: 0;
     }    
     .logistics-delivery-text {
-        margin-bottom: 20px;
+        margin-left: 0;
     }    
     .sublist {
         padding-left: 25px;
     }
-}
-
-@media (max-width: 1100px) {
-    .logic-card1,
-    .logic-card2 {
-        height: 350px;
-    }    
-    .logic-card3 {
-        height: 170px;
-    }    
-    .logic-card4,
-    .logic-card5 {
-        height: 400px;
-    }    
-    .logic-card1 img {
-        height: 349px;
-    }    
-    .logic-card5 img {
+    .logistics-delivery-list h3 {
+        margin-left: 0;
+    }
+    .logistics__title {
+        margin-left: 0;
+    }
+    .logistics__subtitle {
+        margin-left: 0;
+    }
+    .logistics__container {
+        margin: 0 50px;
+    }
+    .logic_image {
+        border-radius: 50px;
+    }
+    .logic-card {
+        border-radius: 50px;
+    }
+    .logic-content-row-card5 img {        
         height: 398px;
-    }    
-    .logic-content-text {
-        padding: 20px;
     }
 }
+
+@media (max-width: 1260px) {  
+    .logic-content-row-card1 img {
+        max-width: 100%;
+        height: auto;
+    }
+    .logic-content-row-card5 img {
+        max-width: 100%;
+        height: auto    ;
+    }
+}
+
+
+@media (max-width: 1045px) {  
+    .logic-content-text {
+        padding: 20px 10px 10px 20px;
+    }
+    .logistics__container {
+        margin: 0;
+    }
+}
+
+@media (max-width: 770px) {  
+    .logistics__container {
+        margin: 0 20px;
+    }
+}
+
 
 @media (max-width: 860px) {
     .logistics__title {
         margin-bottom: 30px;
-     
+        font-size: 40px;
     }
     .logistics__subtitle {
         margin-bottom: 30px;
-
-    }
-    .logic-cards {
-        grid-template-columns: 1fr;
-        grid-template-rows: auto;
-        gap: 15px;
-        padding: 0 10px;
-    }
-    .logic-card1,
-    .logic-card2,
-    .logic-card3,
-    .logic-card4,
-    .logic-card5 {
-        grid-column: 1;
-        grid-row: auto;
-        height: auto; 
     }
     .logic-card1 img,
     .logic-card5 img {
         height: auto;
-        max-height: 300px;
         width: 100%;
     }
     .logic-card3 {
@@ -1737,11 +1831,8 @@ p {
     .logic_image {
         width: 100%;
         height: auto;
-        max-height: 250px;
+        max-height: 100px;
         object-fit: cover;
-    }
-    .logic-content-text {
-        padding: 15px;
     }
     .logistics-delivery-text {
         margin-bottom: 15px;
@@ -1753,21 +1844,29 @@ p {
         flex-direction: column;
     }
 }
-@media (max-width: 480px) {
+@media (max-width: 500px) {
     .logistics__title {
         margin-bottom: 20px;
     }
     .logic-cards {
         gap: 10px;
     }
-    .logic-card {
-        border-radius: 26px;
+    .logistics__container {
+        margin: 0;
     }
-    .logic_image {
-        max-height: 200px;
+    .logic-cards {
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        gap: 15px;
     }
-    .logic-content-text {
-        padding: 10px;
+    .logic-card1,
+    .logic-card2,
+    .logic-card3,
+    .logic-card4,
+    .logic-card5 {
+        grid-column: 1;
+        grid-row: auto;
+        height: auto; 
     }
 }
 
@@ -1814,6 +1913,10 @@ p {
     padding-bottom: 30px;
 }
 
+.director-img {
+    object-fit: cover;
+}
+
 @media (max-width: 1300px) {
     .portfolio__title {
         margin-left: 0;
@@ -1832,11 +1935,9 @@ p {
 @media (max-width: 1045px) {
     .portfolio__title {
         margin-bottom: 20px;
-        padding: 0 15px;
     }
     .portfolio-cards {
         gap: 20px;
-        padding: 0 15px;
     }
     .portfolio-card2 {
         padding: 25px;
@@ -1860,7 +1961,7 @@ p {
     .portfolio-cards {
         grid-template-columns: 1fr; 
         gap: 25px;
-        max-width: 600px;
+        max-width: 100%;
     }
     .portfolio-card1,
     .portfolio-card2 {
@@ -1876,8 +1977,14 @@ p {
     }
     .director-img{
         width: 100%;
-        height: 100%;
+        height: 630px;
+        border-radius: 30px;
+    }
+}
 
+@media (max-width: 770px) {
+    .portfolio__container {
+        margin: 0 20px;
     }
 }
 
@@ -1888,16 +1995,32 @@ p {
     }
     .portfolio-cards {
         gap: 20px;
-        padding: 0 10px;
     }
     .portfolio-card {
-        border-radius: 15px;
+        border-radius: 30px;
     }
     .portfolio-card2 {
-        padding: 15px;
+        padding: 30px;
     }
-    .portfolio-content-text {
-        padding-bottom: 15px;
+}
+
+@media (max-width: 500px) {
+    .portfolio__title {
+        font-size: 1.3rem;
+    }
+    .portfolio-card2 {
+        padding: 10px;
+    }
+    .director-img{
+        width: 100%;
+        height: 430px;
+        border-radius: 30px;
+    }
+    .portfolio-card1 {
+        margin: 0;
+    }
+    .portfolio__container {
+        margin: 0;
     }
 }
 
@@ -1933,18 +2056,20 @@ p {
     font-weight: bold;
     margin-left: 3px;
 }
-
-@media (max-width: 1124px) {
-    .advantages {
-        padding: 30px;
+@media (max-width: 1300px) {
+    .choose-title {
+        margin-left: 0;
+    }
+    .choose__item {
+        padding: 0; 
+    }
+    .advantage__container {
+        margin: 0 50px;
     }
 }
-@media (max-width: 1050px) {
-    .advantages {
-        padding: 30px;
-    }
-    .choose__item{
-        margin-right: 45px;
+@media (max-width: 1045px) {
+    .advantage__container {
+        margin: 0;
     }
     .col-lg-3 {
         flex: 1 0 auto;
@@ -1955,24 +2080,37 @@ p {
         margin-bottom: 19px;
         font-weight: bold;
         margin-left: 3px;
-
     }
 }
 @media (max-width: 870px) {
-    .advantages {
-        padding: 30px;
-    }
+    
     .choose__item {
         flex-direction: row;
         gap: 17px;
         align-items: flex-start;
     }
 }
-@media (max-width: 650px){
+@media (max-width: 770px) {
+    .advantage__container {
+        margin: 0 20px;
+    }
+    .why-img {
+        width: 90px;
+        height: 90px;
+    }
+}
+@media (max-width: 360px){
     .col-lg-3 {    
       width: 52%;
     }
 }
+@media (max-width: 500px) {
+    .advantage__container {
+        margin: 0;
+    }
+
+}
+
 
 /*---------------------Why choose--------------*/
 
@@ -2121,6 +2259,7 @@ p {
 @media (max-width: 1045px) {
     .workPlan {
         background-size: contain;
+        height: 450px;
     }
     .step-content {
         padding: 15px 20px 10px;
@@ -2172,6 +2311,7 @@ p {
         display: flex;
         flex-direction: column;
         row-gap: 20px; 
+        margin: 0 20px;
     }
     .process1 { order: 1; }
     .process2 { order: 2; }
@@ -2203,7 +2343,7 @@ p {
 
 @media (max-width: 500px) {
     .workPlan__container {
-        margin: 0 0;
+        margin: 0;
     }
     .process-item {
         margin-left: 15px;
@@ -2458,14 +2598,20 @@ p {
 
 /* adaptation */
 @media (max-width: 1300px) {
-    .messengers {
+    .form__content {
         margin: 0 50px;
+    }
+    .form__title {
+        margin-left: 0;
+    }
+    .form__subtitle {
+        margin-left: 0;
+    }
+    .contacts__title {
+        margin-left: 0;
     }
     .form-group label {
         font-size: 16px;
-    }
-    .contact-form {
-        margin-right: 50px;
     }
     .form__subtitle {
         width: 370px;
@@ -2504,6 +2650,7 @@ p {
     }
     .form__content {
         padding-top: 100px;
+        margin: 0;
     }
     .form-group {
         margin-bottom: 10px;
@@ -2518,7 +2665,7 @@ p {
         display: flex;
         flex-wrap: wrap;
         gap: 25px;
-        align-items: start;
+        align-items: start; 
         color: white;
     }
     .form {
@@ -2527,7 +2674,7 @@ p {
     }
     .form__content {
         padding-top: 200px;
-        margin: 0 50px;
+        margin: 0 20px;
     }
     .form__title {
         font-size: 40px;
@@ -2547,8 +2694,8 @@ p {
 }
 @media (max-width: 500px) {
     .form__content {
-        padding-top: 200px;
-        margin: 0 0;
+        padding-top: 300px;
+        margin: 0;
     }
 }
 /* ----------- Form Section ------------ */
@@ -2569,6 +2716,11 @@ p {
     animation: partner-scroll 30s linear infinite;
     white-space: nowrap;
     padding: 20px 0;
+    animation-play-state: running;
+}
+.partners-track:hover,
+.partners-track:hover .partner-card {
+  animation-play-state: paused;
 }
 
 .partner-card {
@@ -2606,17 +2758,30 @@ p {
     .partners__title {
         margin-left: 0;
     }
-    .partners {
+    .partners__content {
         margin: 0 50px;
     }
 }
-@media (max-width: 769px) {
+@media (max-width: 1045px) {
+    .partners__content {
+        margin: 0;
+    }
+}
+@media (max-width: 770px) {
     .partner-card img {
         width: auto;
         height: 70px;
     }
     .partners__title {
         margin-bottom: 20px;
+    }
+    .partners__content {
+        margin: 0 20px;
+    }
+}
+@media (max-width: 500px) {
+    .partners__content {
+        margin: 0;
     }
 }
 
@@ -2705,10 +2870,13 @@ p {
     #questions {
         border-radius: 20px;
     }
-}
-@media (max-width: 700px) {
     .question {
-        margin: 0 10px 150px;
+        margin: 0 20px 200px;
+    }
+}
+@media (max-width: 500px) {
+    .question {
+        margin: 0 0 100px;
     }
 }
 
@@ -2718,7 +2886,6 @@ p {
 footer {
     background-color: #4B4B4B;
     color: #FFFFFF;
-    padding: 80px 60px;
 }
 
 .footer-right {
@@ -2829,7 +2996,6 @@ footer {
     }
     .footer-nav {
         gap: 20px;
-        margin-top: 0;
     }
     .footer-link h3 {
         margin-left: 0;
@@ -2877,6 +3043,9 @@ footer {
     .consult-button {
         padding: 15px 25px;
     }
+    .footer__wrapper {
+        margin: 0;
+    }
 }
 @media (max-width: 940px) {
     
@@ -2900,13 +3069,24 @@ footer {
     }
 
 }
-@media (max-width: 769px) {
+@media (max-width: 770px) {
     .footer-nav {
         justify-content: normal;
     }
     .contact-item-img {
         max-width: 25px;
         max-height: 25px;
+    }
+    .footer__wrapper {
+        margin: 0 20px;
+    }
+}
+@media (max-width: 500px) {
+    .footer-contacts {
+        margin-top: 100px;
+    }
+    .footer__wrapper {
+        margin: 0;
     }
 }
 
