--- a/css/reset.css
+++ b/css/reset.css
@@ -5,7 +5,7 @@ a:focus,a:active{outline: none;}
 nav,footer,header,aside{display: block;}
 html,body{
   height:100%;width:100%;
-  font-size:100%;line-height:1;font-size:14px;-ms-text-size-adjust:100%;-moz-text-size-adjust:100%;-webkit-text-size-adjust:100%;}
+  font-size:100%;line-height:1;font-size:14px;-ms-text-size-adjust:100%;-moz-text-size-adjust:100%;-webkit-text-size-adjust:100%;overflow-x: hidden;}
 input,button,textarea{font-family:inherit;}
 input::-ms-clear{display: none;}
 button{cursor: pointer;}
